--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://ajs3993.github.io/React-Portfolio",
+  "homepage": "https://ajs3993.github.io/React-Portfolio/",
   "name": "your-app",
   "version": "0.1.0",
   "private": true,
@@ -12,7 +12,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.1"
   },
   "scripts": {
     "predeploy": "npm run build",
