--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.14.0",
     "bootstrap-css-only": "^4.4.1",
-    "gh-pages": "^3.1.0",
     "mdbreact": "git+https://oauth2:iRJAbqZk6eSbSyxqWSDP@git.mdbootstrap.com/mdb/react/re-pro.git",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -15,16 +14,17 @@
     "react-scripts": "3.4.1"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "rename": "renamer --find App-clear.js --replace App.js ./src/App-clear.js && renamer --find style.css --replace index.css ./src/style.css ",
-    "remove-demo": "rimraf ./src/assets ./src/components ./src/pages ./src/Routes.js ./src/App.js ./src/index.css && npm run rename"
+    "remove-demo": "rimraf ./src/assets ./src/components ./src/pages ./src/Routes.js ./src/App.js ./src/index.css && npm run rename",
+    "predeploy": "npm run build",
+  "deploy": "gh-pages -d build"
   },
   "devDependencies": {
+    "gh-pages": "^3.1.0",
     "renamer": "^1.0.0",
     "rimraf": "^2.6.2"
   },
