--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "@fortawesome/fontawesome-free": "^5.14.0",
     "bootstrap-css-only": "^4.4.1",
     "mdbreact": "git+https://oauth2:iRJAbqZk6eSbSyxqWSDP@git.mdbootstrap.com/mdb/react/re-pro.git",
+    "node-sass": "^4.14.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-particles-js": "^3.3.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "sass": "^1.26.10",
+    "scss": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -21,7 +25,7 @@
     "rename": "renamer --find App-clear.js --replace App.js ./src/App-clear.js && renamer --find style.css --replace index.css ./src/style.css ",
     "remove-demo": "rimraf ./src/assets ./src/components ./src/pages ./src/Routes.js ./src/App.js ./src/index.css && npm run rename",
     "predeploy": "npm run build",
-  "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build"
   },
   "devDependencies": {
     "gh-pages": "^3.1.0",
